fix: Fix a layout issue with the location dropdown on desktop resolutions

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@
 
 #loc-elem-pane{
   position: absolute;
-  width: 100% important!;
-  top: -1000px;
+  width: 100vw important!;
+  top: -1500px;
   z-index: 1;
   padding:10px 0px;
   background-color: white;
@@ -21,7 +21,7 @@
 }
 
 .truncate {
-  width: 250px;
+  margin-right: 0px !important;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -34,6 +34,8 @@
 }
 
 .loc-elem-icon{
+  padding-left: 0px;
+  padding-right: 0px;
   font-size: 20px;
   text-align:center;
 }
